--- a/paper/main.tex
+++ b/paper/main.tex
@@ -42,6 +42,8 @@
 \newunicodechar{∷}{\ensuremath{{::}}}
 \newunicodechar{∃}{\ensuremath\exists}
 \newunicodechar{π}{\ensuremath\pi}
+\newunicodechar{σ}{\ensuremath\sigma}
+\newunicodechar{ρ}{\ensuremath\rho}
 \newunicodechar{⊒}{\ensuremath\pcong}
 \newunicodechar{⊎}{\ensuremath\uplus}
 \newunicodechar{⟦}{\ensuremath\llbracket}
