--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -14,7 +14,7 @@
 %%% NOTATION %%%
 %%%%%%%%%%%%%%%%
 
-\newcommand{\Calculus}{\textsf{LCP}\xspace}
+\newcommand{\Calculus}{\textsf{lin}\CP}
 
 \newcommand{\eg}{e.g.\xspace}
 \newcommand{\ie}{i.e.\xspace}
@@ -282,6 +282,7 @@
 %%%%%%%%%%%%%%%%%
 
 \newcommand{\fn}[1]{\mkfunction{fn}\parens{#1}}
+\newcommand{\fv}[1]{\mkfunction{fv}\parens{#1}}
 \newcommand{\bn}[1]{\mkfunction{bn}\parens{#1}}
 \newcommand{\subst}[2]{\braces{#1/#2}}
 \newcommand{\dual}[1]{#1^{\bot}}
